[BUILD-CORE]: Add ParseQueryPipe and LoggingMiddleware for Rest
